doc/resources/css/shorts.css
div#content {
  background-image:    url("/resources/images/global/background.jpg");
  background-position: top center;
  background-repeat:   no-repeat;
}

div#top_navigation {
  background:   #738494;
  padding-left: 200px;
}

a.top-navigation:visited,
a.top-navigation:link {
  background: #738494;
}

a.top-navigation:hover {
  background: #738494;
}

div#foot_navigation {
  background: #738494;
}

a.foot-navigation:visited,
a.foot-navigation:link {
  background: #738494;
}

a.foot-navigation:hover {
  background: #738494;
}

div#copyright {
  background: #738494;
}

div#zone_image {
  background-image:  url("/resources/images/global/topleft_movies.gif");
  background-repeat: no-repeat;
}

span.shorts-details {
  color:       black;
  font-weight: bold;
  float:       left;
  clear:       both;
}

span.shorts-title {
  color:       red;
  font-weight: bold;
}

div.shorts-details {
  float:       left;
  height:      200px;
  width:       300px;
  padding-top: 20px;
  text-align:  left;
}

div.shorts-image {
  float:       left;
  text-align:  right;
  height:      200px;
  width:       290px;
  padding-top: 20px;
}

div.shorts-comment {
  width:          600px;
  padding-bottom: 10px;
  text-align:     left;
  color:          black;
}

div.shorts-details-link {
  clear:          both;
  width:          600px;
  padding-bottom: 20px;
  text-align:     left;
  border-bottom:  solid #738494 2px;
}

div.more-link {
  clear: both;
  text-align: left;
  float: left;
}

div.up-link {
  float: right;
  text-align: right;
}

div.shorts-google-link {
  width:         600px;
  text-align:    right;
  margin-bottom: 5px;
}

div.shorts-embed {
  clear:          both;
  width:          600px;
  margin-top:     10px;
  margin-bottom:  10px;
}

div.shorts-embed-wrapper {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  cursor: pointer;
}

div.shorts-embed-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

img.shorts-embed-thumbnail {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

div.shorts-embed-play {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 68px;
  height: 48px;
  background-color: rgba(0, 0, 0, 0.7);
  border-radius: 10px;
}

div.shorts-embed-play:after {
  content: '';
  position: absolute;
  top: 50%;
  left: 54%;
  transform: translate(-50%, -50%);
  border-style: solid;
  border-width: 10px 0 10px 20px;
  border-color: transparent transparent transparent white;
}

div.shorts-embed-wrapper:hover div.shorts-embed-play {
  background-color: rgba(204, 0, 0, 0.9);
}

div.shorts-view-count {
  color:       #555;
  font-size:   0.9em;
  padding-top: 4px;
  text-align:  right;
}

a.inner-top-navigation:visited,
a.inner-top-navigation:link {
  color: #DAA520;
}

div.shorts-list-item {
  clear:        both;
  width:        600px;
  margin-left:  auto;
  margin-right: auto;
}

div.short-comment-link {
  clear:          both;
  padding-bottom: 10px;
}

div.short-comment-div {
  color:          black;
  clear:          both;
  padding-top:    10px;
  padding-bottom: 10px;
}

div#artobject_title {
  background-color: #738494;
}

div#artobject_subtitle_left,
div#artobject_subtitle_right {
  background-color: #B2C4D4;
}

div.short-comment-close {
  padding-top:    10px;
  padding-bottom: 10px;
}

